--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,4 @@
-baseURL: https://nimishapokam.github.io
+baseURL: https://nimisha.github.io
 languageCode: en-us
 title: Nimisha Pokam
 theme: digitalgarden
