--- a/netlify.toml
+++ b/netlify.toml
@@ -1,10 +1,11 @@
 [build]
 publish = "public"
-command = "hugo --gc --minify"
+command = "npm i -g postcss-cli && npm run build"
 
 [build.environment]
 HUGO_VERSION = "0.121.1"
-HUGO_ENABLEGITINFO = "true"
+NODE_VERSION = "20.11.1"
+NPM_VERSION = "10.2.4"
 
 [context.production.environment]
 HUGO_ENV = "production"
