--- a/themes/digitalgarden/package.json
+++ b/themes/digitalgarden/package.json
@@ -1,23 +1,17 @@
 {
-  "name": "digital-garden-theme",
-  "version": "1.1.1",
-  "description": "Build your own personal Digital Garden effortlessly with this Hugo theme",
+  "name": "thunderkitkat.netlify.app",
+  "version": "1.0.0",
+  "description": "",
   "scripts": {
-    "dev:css": "NODE_ENV=development ./node_modules/tailwindcss/lib/cli.js -i ./themes/digitalgarden/assets/css/tailwind.css -o ./static/css/main.css -w",
-    "build:css": "NODE_ENV=production ./node_modules/tailwindcss/lib/cli.js -i ./themes/digitalgarden/assets/css/tailwind.css -o ./static/css/main.css --minify",
-    "develop": "concurrently  \"npm run dev:css\" \"npm run dev\"",
     "dev": "hugo serve",
-    "build": "npm run build:css && hugo --gc --minify"
+    "build": "hugo --gc --minify",
+    "start": "hugo serve"
   },
-  "keywords": [],
-  "author": "Varun A P",
-  "license": "MIT",
   "dependencies": {
-    "@tailwindcss/line-clamp": "^0.4.4",
     "@tailwindcss/typography": "^0.5.10",
+    "autoprefixer": "^10.4.17",
+    "postcss": "^8.4.35",
+    "postcss-cli": "^11.0.0",
     "tailwindcss": "^3.4.1"
-  },
-  "devDependencies": {
-    "concurrently": "^8.2.2"
   }
 }
