--- a/themes/digitalgarden/package.json
+++ b/themes/digitalgarden/package.json
@@ -1,17 +1,10 @@
 {
   "name": "thunderkitkat.netlify.app",
   "version": "1.0.0",
-  "description": "",
   "scripts": {
-    "dev": "hugo serve",
-    "build": "hugo --gc --minify",
-    "start": "hugo serve"
-  },
-  "dependencies": {
-    "@tailwindcss/typography": "^0.5.10",
-    "autoprefixer": "^10.4.17",
-    "postcss": "^8.4.35",
-    "postcss-cli": "^11.0.0",
-    "tailwindcss": "^3.4.1"
+    "dev:css": "tailwindcss -i ./themes/digitalgarden/assets/css/tailwind.css -o ./static/css/main.css --watch",
+    "build:css": "tailwindcss -i ./themes/digitalgarden/assets/css/tailwind.css -o ./static/css/main.css --minify",
+    "dev": "npm run build:css && hugo server",
+    "build": "npm run build:css && hugo --gc --minify"
   }
 }
