--- a/themes/digitalgarden/package.json
+++ b/themes/digitalgarden/package.json
@@ -1,10 +1,20 @@
 {
   "name": "thunderkitkat.netlify.app",
   "version": "1.0.0",
+  "description": "Your site description",
   "scripts": {
-    "dev:css": "tailwindcss -i ./themes/digitalgarden/assets/css/tailwind.css -o ./static/css/main.css --watch",
-    "build:css": "tailwindcss -i ./themes/digitalgarden/assets/css/tailwind.css -o ./static/css/main.css --minify",
-    "dev": "npm run build:css && hugo server",
+    "dev:css": "tailwindcss -i ./themes/digitalgarden/assets/css/tailwind.css -o ./assets/css/compiled/main.css --watch",
+    "build:css": "tailwindcss -i ./themes/digitalgarden/assets/css/tailwind.css -o ./assets/css/compiled/main.css --minify",
+    "dev": "hugo serve",
     "build": "npm run build:css && hugo --gc --minify"
+  },
+  "dependencies": {
+    "@tailwindcss/typography": "^0.5.10",
+    "tailwindcss": "^3.4.1"
+  },
+  "devDependencies": {
+    "postcss-cli": "^11.0.0",
+    "autoprefixer": "^10.4.17",
+    "postcss": "^8.4.35"
   }
 }
